# lib/db/src/schema/index.ts
@@ -3,6 +3,7 @@ export * from "./events";
 export * from "./merchants";
 export * from "./inventory";
 export * from "./bracelets";
+export * from "./splitPayments";
 export * from "./transactions";
 export * from "./promoterCompanies";
 export * from "./refunds";
